# yeastriction

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yaml  models.py  pyproject.toml  utils.py
.github/workflows/: docker-image.yaml
assets/: styles.css
genomes/: CLIB382.tab
pages/: import_page.py  main_page.py  paper.py  protocol.py
